v17.1/classes/GC.Spread.Sheets.Tables.TableThemes.md
# Class: TableThemes

[Sheets](../modules/GC.Spread.Sheets.md).[Tables](../modules/GC.Spread.Sheets.Tables.md).TableThemes

## Table of contents

### Constructors

- [constructor](GC.Spread.Sheets.Tables.TableThemes.md#constructor)

### Properties

- [dark1](GC.Spread.Sheets.Tables.TableThemes.md#dark1)
- [dark10](GC.Spread.Sheets.Tables.TableThemes.md#dark10)
- [dark11](GC.Spread.Sheets.Tables.TableThemes.md#dark11)
- [dark2](GC.Spread.Sheets.Tables.TableThemes.md#dark2)
- [dark3](GC.Spread.Sheets.Tables.TableThemes.md#dark3)
- [dark4](GC.Spread.Sheets.Tables.TableThemes.md#dark4)
- [dark5](GC.Spread.Sheets.Tables.TableThemes.md#dark5)
- [dark6](GC.Spread.Sheets.Tables.TableThemes.md#dark6)
- [dark7](GC.Spread.Sheets.Tables.TableThemes.md#dark7)
- [dark8](GC.Spread.Sheets.Tables.TableThemes.md#dark8)
- [dark9](GC.Spread.Sheets.Tables.TableThemes.md#dark9)
- [light1](GC.Spread.Sheets.Tables.TableThemes.md#light1)
- [light10](GC.Spread.Sheets.Tables.TableThemes.md#light10)
- [light11](GC.Spread.Sheets.Tables.TableThemes.md#light11)
- [light12](GC.Spread.Sheets.Tables.TableThemes.md#light12)
- [light13](GC.Spread.Sheets.Tables.TableThemes.md#light13)
- [light14](GC.Spread.Sheets.Tables.TableThemes.md#light14)
- [light15](GC.Spread.Sheets.Tables.TableThemes.md#light15)
- [light16](GC.Spread.Sheets.Tables.TableThemes.md#light16)
- [light17](GC.Spread.Sheets.Tables.TableThemes.md#light17)
- [light18](GC.Spread.Sheets.Tables.TableThemes.md#light18)
- [light19](GC.Spread.Sheets.Tables.TableThemes.md#light19)
- [light2](GC.Spread.Sheets.Tables.TableThemes.md#light2)
- [light20](GC.Spread.Sheets.Tables.TableThemes.md#light20)
- [light21](GC.Spread.Sheets.Tables.TableThemes.md#light21)
- [light3](GC.Spread.Sheets.Tables.TableThemes.md#light3)
- [light4](GC.Spread.Sheets.Tables.TableThemes.md#light4)
- [light5](GC.Spread.Sheets.Tables.TableThemes.md#light5)
- [light6](GC.Spread.Sheets.Tables.TableThemes.md#light6)
- [light7](GC.Spread.Sheets.Tables.TableThemes.md#light7)
- [light8](GC.Spread.Sheets.Tables.TableThemes.md#light8)
- [light9](GC.Spread.Sheets.Tables.TableThemes.md#light9)
- [medium1](GC.Spread.Sheets.Tables.TableThemes.md#medium1)
- [medium10](GC.Spread.Sheets.Tables.TableThemes.md#medium10)
- [medium11](GC.Spread.Sheets.Tables.TableThemes.md#medium11)
- [medium12](GC.Spread.Sheets.Tables.TableThemes.md#medium12)
- [medium13](GC.Spread.Sheets.Tables.TableThemes.md#medium13)
- [medium14](GC.Spread.Sheets.Tables.TableThemes.md#medium14)
- [medium15](GC.Spread.Sheets.Tables.TableThemes.md#medium15)
- [medium16](GC.Spread.Sheets.Tables.TableThemes.md#medium16)
- [medium17](GC.Spread.Sheets.Tables.TableThemes.md#medium17)
- [medium18](GC.Spread.Sheets.Tables.TableThemes.md#medium18)
- [medium19](GC.Spread.Sheets.Tables.TableThemes.md#medium19)
- [medium2](GC.Spread.Sheets.Tables.TableThemes.md#medium2)
- [medium20](GC.Spread.Sheets.Tables.TableThemes.md#medium20)
- [medium21](GC.Spread.Sheets.Tables.TableThemes.md#medium21)
- [medium22](GC.Spread.Sheets.Tables.TableThemes.md#medium22)
- [medium23](GC.Spread.Sheets.Tables.TableThemes.md#medium23)
- [medium24](GC.Spread.Sheets.Tables.TableThemes.md#medium24)
- [medium25](GC.Spread.Sheets.Tables.TableThemes.md#medium25)
- [medium26](GC.Spread.Sheets.Tables.TableThemes.md#medium26)
- [medium27](GC.Spread.Sheets.Tables.TableThemes.md#medium27)
- [medium28](GC.Spread.Sheets.Tables.TableThemes.md#medium28)
- [medium3](GC.Spread.Sheets.Tables.TableThemes.md#medium3)
- [medium4](GC.Spread.Sheets.Tables.TableThemes.md#medium4)
- [medium5](GC.Spread.Sheets.Tables.TableThemes.md#medium5)
- [medium6](GC.Spread.Sheets.Tables.TableThemes.md#medium6)
- [medium7](GC.Spread.Sheets.Tables.TableThemes.md#medium7)
- [medium8](GC.Spread.Sheets.Tables.TableThemes.md#medium8)
- [medium9](GC.Spread.Sheets.Tables.TableThemes.md#medium9)
- [professional1](GC.Spread.Sheets.Tables.TableThemes.md#professional1)
- [professional10](GC.Spread.Sheets.Tables.TableThemes.md#professional10)
- [professional11](GC.Spread.Sheets.Tables.TableThemes.md#professional11)
- [professional12](GC.Spread.Sheets.Tables.TableThemes.md#professional12)
- [professional13](GC.Spread.Sheets.Tables.TableThemes.md#professional13)
- [professional14](GC.Spread.Sheets.Tables.TableThemes.md#professional14)
- [professional15](GC.Spread.Sheets.Tables.TableThemes.md#professional15)
- [professional16](GC.Spread.Sheets.Tables.TableThemes.md#professional16)
- [professional17](GC.Spread.Sheets.Tables.TableThemes.md#professional17)
- [professional18](GC.Spread.Sheets.Tables.TableThemes.md#professional18)
- [professional19](GC.Spread.Sheets.Tables.TableThemes.md#professional19)
- [professional2](GC.Spread.Sheets.Tables.TableThemes.md#professional2)
- [professional20](GC.Spread.Sheets.Tables.TableThemes.md#professional20)
- [professional21](GC.Spread.Sheets.Tables.TableThemes.md#professional21)
- [professional22](GC.Spread.Sheets.Tables.TableThemes.md#professional22)
- [professional23](GC.Spread.Sheets.Tables.TableThemes.md#professional23)
- [professional24](GC.Spread.Sheets.Tables.TableThemes.md#professional24)
- [professional3](GC.Spread.Sheets.Tables.TableThemes.md#professional3)
- [professional4](GC.Spread.Sheets.Tables.TableThemes.md#professional4)
- [professional5](GC.Spread.Sheets.Tables.TableThemes.md#professional5)
- [professional6](GC.Spread.Sheets.Tables.TableThemes.md#professional6)
- [professional7](GC.Spread.Sheets.Tables.TableThemes.md#professional7)
- [professional8](GC.Spread.Sheets.Tables.TableThemes.md#professional8)
- [professional9](GC.Spread.Sheets.Tables.TableThemes.md#professional9)

## Constructors

### <a id="constructor" name="constructor"></a> constructor

• **new TableThemes**()

内置的表格主题集合

## Properties

### <a id="dark1" name="dark1"></a> dark1

▪ `Static` **dark1**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

dark1风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.dark1);
```

___

### <a id="dark10" name="dark10"></a> dark10

▪ `Static` **dark10**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

dark10风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.dark10);
```

___

### <a id="dark11" name="dark11"></a> dark11

▪ `Static` **dark11**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

dark11风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.dark11);
```

___

### <a id="dark2" name="dark2"></a> dark2

▪ `Static` **dark2**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

dark2风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.dark2);
```

___

### <a id="dark3" name="dark3"></a> dark3

▪ `Static` **dark3**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

dark3风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.dark3);
```

___

### <a id="dark4" name="dark4"></a> dark4

▪ `Static` **dark4**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

dark4风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.dark4);
```

___

### <a id="dark5" name="dark5"></a> dark5

▪ `Static` **dark5**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

dark5风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.dark5);
```

___

### <a id="dark6" name="dark6"></a> dark6

▪ `Static` **dark6**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

dark6风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.dark6);
```

___

### <a id="dark7" name="dark7"></a> dark7

▪ `Static` **dark7**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

dark7风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.dark7);
```

___

### <a id="dark8" name="dark8"></a> dark8

▪ `Static` **dark8**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

dark8风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.dark8);
```

___

### <a id="dark9" name="dark9"></a> dark9

▪ `Static` **dark9**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

dark9风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.dark9);
```

___

### <a id="light1" name="light1"></a> light1

▪ `Static` **light1**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light1风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light1);
```

___

### <a id="light10" name="light10"></a> light10

▪ `Static` **light10**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light10风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light10);
```

___

### <a id="light11" name="light11"></a> light11

▪ `Static` **light11**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light11风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light11);
```

___

### <a id="light12" name="light12"></a> light12

▪ `Static` **light12**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light12风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light12);
```

___

### <a id="light13" name="light13"></a> light13

▪ `Static` **light13**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light13风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light13);
```

___

### <a id="light14" name="light14"></a> light14

▪ `Static` **light14**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light14风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light14);
```

___

### <a id="light15" name="light15"></a> light15

▪ `Static` **light15**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light15风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light15);
```

___

### <a id="light16" name="light16"></a> light16

▪ `Static` **light16**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light16风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light16);
```

___

### <a id="light17" name="light17"></a> light17

▪ `Static` **light17**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light17风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light17);
```

___

### <a id="light18" name="light18"></a> light18

▪ `Static` **light18**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light18风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light18);
```

___

### <a id="light19" name="light19"></a> light19

▪ `Static` **light19**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light19风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light19);
```

___

### <a id="light2" name="light2"></a> light2

▪ `Static` **light2**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light2风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light2);
```

___

### <a id="light20" name="light20"></a> light20

▪ `Static` **light20**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light20风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light20);
```

___

### <a id="light21" name="light21"></a> light21

▪ `Static` **light21**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light21风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light21);
```

___

### <a id="light3" name="light3"></a> light3

▪ `Static` **light3**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light3风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light3);
```

___

### <a id="light4" name="light4"></a> light4

▪ `Static` **light4**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light4风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light4);
```

___

### <a id="light5" name="light5"></a> light5

▪ `Static` **light5**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light5风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light5);
```

___

### <a id="light6" name="light6"></a> light6

▪ `Static` **light6**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light6风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light6);
```

___

### <a id="light7" name="light7"></a> light7

▪ `Static` **light7**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light7风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light7);
```

___

### <a id="light8" name="light8"></a> light8

▪ `Static` **light8**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light8风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light8);
```

___

### <a id="light9" name="light9"></a> light9

▪ `Static` **light9**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

light9风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.light9);
```

___

### <a id="medium1" name="medium1"></a> medium1

▪ `Static` **medium1**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium1风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium1);
```

___

### <a id="medium10" name="medium10"></a> medium10

▪ `Static` **medium10**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium10风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium10);
```

___

### <a id="medium11" name="medium11"></a> medium11

▪ `Static` **medium11**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium11风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium11);
```

___

### <a id="medium12" name="medium12"></a> medium12

▪ `Static` **medium12**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium12风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium12);
```

___

### <a id="medium13" name="medium13"></a> medium13

▪ `Static` **medium13**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium13风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium13);
```

___

### <a id="medium14" name="medium14"></a> medium14

▪ `Static` **medium14**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium14风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium14);
```

___

### <a id="medium15" name="medium15"></a> medium15

▪ `Static` **medium15**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium15风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium15);
```

___

### <a id="medium16" name="medium16"></a> medium16

▪ `Static` **medium16**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium16风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium16);
```

___

### <a id="medium17" name="medium17"></a> medium17

▪ `Static` **medium17**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium17风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium17);
```

___

### <a id="medium18" name="medium18"></a> medium18

▪ `Static` **medium18**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium18风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium18);
```

___

### <a id="medium19" name="medium19"></a> medium19

▪ `Static` **medium19**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium19风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium19);
```

___

### <a id="medium2" name="medium2"></a> medium2

▪ `Static` **medium2**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium2风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium2);
```

___

### <a id="medium20" name="medium20"></a> medium20

▪ `Static` **medium20**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium20风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium20);
```

___

### <a id="medium21" name="medium21"></a> medium21

▪ `Static` **medium21**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium21风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium21);
```

___

### <a id="medium22" name="medium22"></a> medium22

▪ `Static` **medium22**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium22风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium22);
```

___

### <a id="medium23" name="medium23"></a> medium23

▪ `Static` **medium23**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium23风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium23);
```

___

### <a id="medium24" name="medium24"></a> medium24

▪ `Static` **medium24**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium24风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium24);
```

___

### <a id="medium25" name="medium25"></a> medium25

▪ `Static` **medium25**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium25风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium25);
```

___

### <a id="medium26" name="medium26"></a> medium26

▪ `Static` **medium26**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium26风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium26);
```

___

### <a id="medium27" name="medium27"></a> medium27

▪ `Static` **medium27**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium27风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium27);
```

___

### <a id="medium28" name="medium28"></a> medium28

▪ `Static` **medium28**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium28风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium28);
```

___

### <a id="medium3" name="medium3"></a> medium3

▪ `Static` **medium3**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium3风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium3);
```

___

### <a id="medium4" name="medium4"></a> medium4

▪ `Static` **medium4**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium4风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium4);
```

___

### <a id="medium5" name="medium5"></a> medium5

▪ `Static` **medium5**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium5风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium5);
```

___

### <a id="medium6" name="medium6"></a> medium6

▪ `Static` **medium6**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium6风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium6);
```

___

### <a id="medium7" name="medium7"></a> medium7

▪ `Static` **medium7**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium7风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium7);
```

___

### <a id="medium8" name="medium8"></a> medium8

▪ `Static` **medium8**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium8风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium8);
```

___

### <a id="medium9" name="medium9"></a> medium9

▪ `Static` **medium9**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

medium9风格

**`returns`**

**`example`**
```
var table = sheet.tables.add("table1", 1, 1, 10, 5, GC.Spread.Sheets.Tables.TableTheme.medium9);
```

___

### <a id="professional1" name="professional1"></a> professional1

▪ `Static` **professional1**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional1样式

**`returns`**

___

### <a id="professional10" name="professional10"></a> professional10

▪ `Static` **professional10**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional10样式

**`returns`**

___

### <a id="professional11" name="professional11"></a> professional11

▪ `Static` **professional11**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional11样式

**`returns`**

___

### <a id="professional12" name="professional12"></a> professional12

▪ `Static` **professional12**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional12样式

**`returns`**

___

### <a id="professional13" name="professional13"></a> professional13

▪ `Static` **professional13**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional13样式

**`returns`**

___

### <a id="professional14" name="professional14"></a> professional14

▪ `Static` **professional14**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional14样式

**`returns`**

___

### <a id="professional15" name="professional15"></a> professional15

▪ `Static` **professional15**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional15样式

**`returns`**

___

### <a id="professional16" name="professional16"></a> professional16

▪ `Static` **professional16**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional16样式

**`returns`**

___

### <a id="professional17" name="professional17"></a> professional17

▪ `Static` **professional17**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional17样式

**`returns`**

___

### <a id="professional18" name="professional18"></a> professional18

▪ `Static` **professional18**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional18样式

**`returns`**

___

### <a id="professional19" name="professional19"></a> professional19

▪ `Static` **professional19**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional19样式

**`returns`**

___

### <a id="professional2" name="professional2"></a> professional2

▪ `Static` **professional2**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional2样式

**`returns`**

___

### <a id="professional20" name="professional20"></a> professional20

▪ `Static` **professional20**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional20样式

**`returns`**

___

### <a id="professional21" name="professional21"></a> professional21

▪ `Static` **professional21**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional21样式

**`returns`**

___

### <a id="professional22" name="professional22"></a> professional22

▪ `Static` **professional22**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional22样式

**`returns`**

___

### <a id="professional23" name="professional23"></a> professional23

▪ `Static` **professional23**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional23样式

**`returns`**

___

### <a id="professional24" name="professional24"></a> professional24

▪ `Static` **professional24**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional24样式

**`returns`**

___

### <a id="professional3" name="professional3"></a> professional3

▪ `Static` **professional3**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional3样式

**`returns`**

___

### <a id="professional4" name="professional4"></a> professional4

▪ `Static` **professional4**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional4样式

**`returns`**

___

### <a id="professional5" name="professional5"></a> professional5

▪ `Static` **professional5**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional5样式

**`returns`**

___

### <a id="professional6" name="professional6"></a> professional6

▪ `Static` **professional6**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional6样式

**`returns`**

___

### <a id="professional7" name="professional7"></a> professional7

▪ `Static` **professional7**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional7样式

**`returns`**

___

### <a id="professional8" name="professional8"></a> professional8

▪ `Static` **professional8**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional8样式

**`returns`**

___

### <a id="professional9" name="professional9"></a> professional9

▪ `Static` **professional9**: [`TableTheme`](GC.Spread.Sheets.Tables.TableTheme.md)

获取professional9样式

**`returns`**
